--- a/행운의편지.html
+++ b/행운의편지.html
@@ -20,7 +20,7 @@
       있어야되는 상황에서 고국의 친구 강정우를 그리워하다 작성중이다. 빡쳐.건강해.
     </div>
     <div class="photo"></div>
-    <div class="photo-name"> 브라이튼 어딘가 </div>
+    <div class="photo-name"> Seven Sisters, Brighton </div>
     <div class="End">
       <span3 class="ps">
         행운의편지2에서는 답장쓰실 공간도 마련하여 보낼예정입니다 : )
@@ -51,3 +51,4 @@
   </div>
 </div>
 </body>
+-->
